# hstib

./: LICENSE  README.md  tib.cabal
src/: Alphabet.hs  Main.hs
