name:                tib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iron_houzi/tib#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Skahjem-Eriksen
maintainer:          robindse@fastmail.com
copyright:           2018 Robin Skahjem-Eriksen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tib
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , containers
  other-modules:        Alphabet
